# l2qt

./: CMakeLists.txt  airplanes.txt  l2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
